Fixing a layout problem when viewport has more height than html content. CALSboilerplate_underscores_custom.js: On page load, variables set to calculate height of layout, to conditionally add/remove css classes for the positioning of the footer. Also, these statements are wrapped in a resize function _footer.scss: adding classes that are meant to toggle, which control the position of the footer.

--- a/sass/theme/_footer.scss
+++ b/sass/theme/_footer.scss
@@ -1,7 +1,10 @@
 html body.page footer#colophon.site-footer{
-	width:100%;
+	/*width:100%;
 	background-color:#3E3938;
 	min-height:250px;
+	position:fixed;
+	bottom: 0;
+	left:0;*/
 	div.darkband{
 		width:100%;
 		height:8px;
@@ -69,4 +72,20 @@ html body.page footer#colophon.site-footer{
 			text-decoration:underline;
 		}
 	}
+}
+
+html body.page footer#colophon.site-footer.footerPositionFixed{
+	width:100%;
+	background-color:#3E3938;
+	min-height:250px;
+	position:fixed;
+	bottom: 0;
+	left:0;
+}
+
+html body.page footer#colophon.site-footer.footerPositionStatic{
+	width:100%;
+	background-color:#3E3938;
+	min-height:250px;
+	position:static;
 }
